# deepSEA

./: .gitignore  .gitmodules  LICENSE  README.md  dataset.py  experiments.ods  train.py  visualization.py
checkpoints/: SimpleMlp_407.pt  b16_currentpos_SimpleMlp_68.pt  b16_directmap_SimpleMlp_41.pt  b16_nopos_SimpleMlp_49.pt  b16_withvel_SimpleMlp_114.pt  b16v_SimpleMlp_67.pt  free_SimpleMlp_42.pt  free_nopos_novel2_SimpleMlp_22.pt  free_v_SimpleMlp_8.pt  fv_SimpleMlp_315.pt  hfree_SimpleMlp_332.pt  hist10v_SimpleMlp_7.pt  iv_SimpleMlp_223.pt  large_free_SimpleMlp_997.pt  p_SiamNN_2500.pt  p_SiamNN_4298.pt  p_SiamNN_9994.pt  p_SimpleMlp_1214.pt  p_SimpleMlp_19.pt  p_SimpleMlp_29.pt  positive_SiamNN_2483.pt  torque_SimpleMlp_449.pt  vhfree_SimpleMlp_16.pt
checkpoints/dropout/: fv_SimpleMlp_178.pt  iv_SimpleMlp_119.pt
checkpoints/free_hanging/: free_SimpleMlp_2500.pt  positive_SimpleMlp_2683.pt
checkpoints/ground/: all_SimpleMlp_5146.pt  e_SimpleMlp_2143.pt  e_SimpleMlp_479.pt  f_SimpleMlp_7561.pt  full_SimpleMlp_558.pt  hp_SimpleMlp_65.pt  i_SimpleMlp_6847.pt  if_SimpleMlp_3821.pt  mp_SimpleMlp_133.pt  nophall_SimpleMlp_1971.pt  nopos_SimpleMlp_175.pt  p_SimpleMlp_1773.pt  p_SimpleMlp_860.pt  v_SimpleMlp_2060.pt  ve_SimpleMlp_5517.pt
checkpoints/old/: b16hist10v_SimpleMlp_37.pt  fiv_SimpleMlp_161.pt  free_SimpleMlp_53.pt  free_SimpleMlp_556.pt  h_SimpleMlp_347.pt  (+8 more)
data/: .~lock.d1.csv#  .~lock.d1freec.csv#  d1free.csv  d3.csv  new_d2.csv  pid_batt_d1.csv  pid_d2.csv  small.csv
data_reader/: package.xml  setup.cfg  setup.py
data_reader/config/: sensors.yaml
data_reader/data_reader/: data_reader.py  reader.py
data_reader/launch/: launch_reader.py
data_reader/scripts/: calibration.py  data_cleaner.py  record.py
deep_sea/: CMakeLists.txt  package.xml  setup.cfg  setup.py
deep_sea/deep_sea/: dataset.py  deepsea_pywrapper.py  ogma.py  sea_correction_helper.py  train.py
deep_sea/deep_sea/models/: siam.py  simplemlp.py
deep_sea/include/deep_sea/: sea_correction_helper.h
deep_sea/scripts/: amperehour.py  eval.py  net_test.py  spring_sim.py  testset_eval.py  visualization.py
deep_sea/src/: sea_correction_helper.cpp
electronics/: BOM_PCB_hall_sensor_2022-04-04.csv
microcontroller/: esp32_hall.ino
models/: siam.py  simple-mlp.py  simplemlp.py
(+27 files in other folders)
