<package format="2">
  <name>data_reader</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="6stelter@informatik.uni-hamburg.de">sebi</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>sensor_msgs</depend>
  <depend>bitbots_msgs</depend>
  <depend>rclpy</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
